--- a/Text.ipynb
+++ b/Text.ipynb
@@ -410,6 +410,96 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "Look at possible labelings of the text"
+      ],
+      "metadata": {
+        "id": "u2Tu1IJShLhG"
+      },
+      "id": "u2Tu1IJShLhG"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "zsc = pipeline(\"zero-shot-classification\", model=\"facebook/bart-large-mnli\", device=0)"
+      ],
+      "metadata": {
+        "id": "XDYuVsTKhNc9"
+      },
+      "id": "XDYuVsTKhNc9",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "candidate_labels = []"
+      ],
+      "metadata": {
+        "id": "lBgS54cShNh_"
+      },
+      "id": "lBgS54cShNh_",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "results = zsc(, candidate_labels, batch_size=22)"
+      ],
+      "metadata": {
+        "id": "Nu71chUMhNzo"
+      },
+      "id": "Nu71chUMhNzo",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "zsc_labels = []\n",
+        "for result in results:\n",
+        "  label = result['labels'][np.argmax(result['scores'])]\n",
+        "  zsc_labels.append(label)"
+      ],
+      "metadata": {
+        "id": "l-0K4xKEhOBk"
+      },
+      "id": "l-0K4xKEhOBk",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "df[\"zsc_label\"] = zsc_labels"
+      ],
+      "metadata": {
+        "id": "9HWySiuEhOJq"
+      },
+      "id": "9HWySiuEhOJq",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fig = plt.figure(figsize=(15, 5))\n",
+        "sns.histplot(data=df, x=\"zsc_label\")\n",
+        "plt.title(\"Zero-shot Topics\")\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "QnGt3S2JhOO6"
+      },
+      "id": "QnGt3S2JhOO6",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
       "id": "f8306509-c95b-4f5f-9068-ba6ad238afad",
       "metadata": {
         "id": "f8306509-c95b-4f5f-9068-ba6ad238afad"
