Major Updates in preparation for presentation

--- a/Tabular/Tabular.ipynb
+++ b/Tabular/Tabular.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "5a93b098-43cc-4efe-9fef-1947f6732c4d",
+   "metadata": {},
+   "source": [
+    "#### Install and import neccesary packages to the the environment"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "L0PWpLd57OkE",
@@ -9,8 +17,7 @@
    },
    "outputs": [],
    "source": [
-    "! pip install optuna textstat category_encoders\n",
-    "! pip install https://github.com/pandas-profiling/pandas-profiling/archive/master.zip"
+    "! pip install optuna textstat category_encoders pandas_profiling lightgbm"
    ]
   },
   {
@@ -23,7 +30,9 @@
    },
    "outputs": [],
    "source": [
-    "import os, random, optuna, textstat\n",
+    "%matplotlib inline\n",
+    "\n",
+    "import os, random, optuna, textstat, multiprocessing, re\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from pandas.api.types import CategoricalDtype\n",
@@ -66,44 +75,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "58Pxxp1Bmu8M",
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "58Pxxp1Bmu8M",
-    "outputId": "78a72e50-34fc-4a7f-d65c-20f7dcc0101f"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading...\n",
-      "From: https://drive.google.com/uc?id=1d0XpolF_YMrXX_Wib6lMZVQMgBt2bpc0\n",
-      "To: /content/power.csv\n",
-      "100% 14.2M/14.2M [00:00<00:00, 204MB/s]\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "id": "a98585f8-fe02-4730-911d-4f71a2d04f1c",
+   "metadata": {},
    "source": [
-    "! gdown \"1d0XpolF_YMrXX_Wib6lMZVQMgBt2bpc0\""
+    "#### Import the Data\n",
+    "\n",
+    "__note__: depending on the data source, this may require additional packages being installed and/or imported"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5955ac5c-58bf-4dfa-88be-24b9678af071",
-   "metadata": {
-    "id": "5955ac5c-58bf-4dfa-88be-24b9678af071"
-   },
+   "id": "83565d2f-3b23-43e6-b641-ce8d14e0b1af",
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "'''Set dataset directory'''\n",
-    "ROOT_DIR = \"/content/Data\""
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -234,7 +221,7 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(12,8))\n",
-    "sns.distplot(df[''])"
+    "sns.histplot(df[''])"
    ]
   },
   {
@@ -343,12 +330,12 @@
    "outputs": [],
    "source": [
     "class ML_Impute(TransformerMixin):\n",
-    "      '''\n",
-    "      Impute missing values by treating the imputational as a machine learning problem. For numerical\n",
-    "      columns, we can treat the problem as a regression problem, and for categorical, a classification problem.\n",
-    "      For this method, we'll iterate through all of the columns with one column being the target variable\n",
-    "      and the others as being predictor variables\n",
-    "      '''\n",
+    "    '''\n",
+    "    Impute missing values by treating the imputational as a machine learning problem. For numerical\n",
+    "    columns, we can treat the problem as a regression problem, and for categorical, a classification problem.\n",
+    "    For this method, we'll iterate through all of the columns with one column being the target variable\n",
+    "    and the others as being predictor variables\n",
+    "    '''\n",
     "\n",
     "    def __init__(self, params={}):\n",
     "        self.params = {}\n",
@@ -430,20 +417,54 @@
    "outputs": [],
    "source": [
     "def cap_outliers(df, variables=[None]):\n",
+    "    \"\"\"\n",
+    "    Caps outlier values in a dataframe using the mean and standard deviation of each specified variable.\n",
+    "\n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "    df : pandas DataFrame\n",
+    "        The dataframe containing the data to be capped.\n",
+    "    variables : list or None, optional (default=[None])\n",
+    "        The list of column names to cap outlier values. If None, all columns with numerical data will be capped.\n",
+    "\n",
+    "    Returns:\n",
+    "    --------\n",
+    "    pandas DataFrame\n",
+    "        The dataframe with capped outlier values.\n",
+    "\n",
+    "    Example:\n",
+    "    --------\n",
+    "    >>> import pandas as pd\n",
+    "    >>> import numpy as np\n",
+    "    >>> data = {'A': [1, 2, 3, 1000], 'B': [4, 5, 6, 2000]}\n",
+    "    >>> df = pd.DataFrame(data)\n",
+    "    >>> df\n",
+    "          A     B\n",
+    "    0     1     4\n",
+    "    1     2     5\n",
+    "    2     3     6\n",
+    "    3  1000  2000\n",
+    "    >>> cap_outliers(df, variables=['A'])\n",
+    "         A     B\n",
+    "    0    1     4\n",
+    "    1    2     5\n",
+    "    2    3     6\n",
+    "    3  100    2000\n",
+    "    \"\"\"\n",
     "    df = df.copy()\n",
     "    for variable in variables:\n",
-    "    upper_limit = df[variable].mean() + 3*df[variable].std()\n",
-    "    lower_limit = df[variable].mean() - 3*df[variable].std()\n",
-    "    df[variable] = np.where(df[variable]> upper_limit, upper_limit, np.where(\n",
-    "        df[variable]<lower_limit, lower_limit, df[variable]\n",
-    "    ))\n",
+    "        upper_limit = df[variable].mean() + 3*df[variable].std()\n",
+    "        lower_limit = df[variable].mean() - 3*df[variable].std()\n",
+    "        df[variable] = np.where(df[variable]> upper_limit, upper_limit, np.where(\n",
+    "            df[variable]<lower_limit, lower_limit, df[variable]\n",
+    "        ))\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "75ef91dd-cda0-4298-b493-0156e091ceb3",
+   "execution_count": 55,
+   "id": "66d8320e-8b46-4321-8335-f82ab93be9b4",
    "metadata": {
     "id": "75ef91dd-cda0-4298-b493-0156e091ceb3"
    },
@@ -451,7 +472,10 @@
    "source": [
     "# Wrapper function to read in, encode and impute missing values for the data\n",
     "\n",
-    "def preprocess_data(df, cat_features=[None], outlier_features=[None]):\n",
+    "def preprocess_data(train_df, test_df=None, cat_features=[None], outlier_features=[None]):\n",
+    "    \n",
+    "    if test_df is not None:\n",
+    "        df = pd.concat([train_df, test_df])\n",
     "    \n",
     "    # Specify categorical variables\n",
     "    for name in cat_features:\n",
@@ -459,11 +483,15 @@
     "        # Add a None category for missing values\n",
     "        if \"None\" not in df[name].cat.categories:\n",
     "            df[name].cat.add_categories(\"None\", inplace=True)\n",
+    "            \n",
+    "    # Reform splits or create test data set, if applicable\n",
+    "    if test_df is not None:\n",
+    "        test = df.loc[test_df.index, :]\n",
+    "        train = df.drop(test_df.index)\n",
+    "    else:\n",
+    "        train, test = train_test_split(df, test_size=0.2)\n",
     "\n",
-    "    # create test data set\n",
-    "    train, test = train_test_split(df, test_size=0.2)\n",
-    "\n",
-    "    # Preprocessing\n",
+    "    # Preprocessing for missing data and outliers\n",
     "    imputer = ML_Impute()\n",
     "    train = imputer.fit_transform(train)\n",
     "    train = cap_outliers(train, outlier_features)\n",
@@ -477,19 +505,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "be2ee427-5728-4bfe-95ca-7e977fb891be",
+   "execution_count": 56,
+   "id": "77eaab8f-72c1-4dce-b4ca-1761aac9ea8a",
    "metadata": {
-    "id": "be2ee427-5728-4bfe-95ca-7e977fb891be"
+    "tags": []
    },
    "outputs": [],
    "source": [
     "#Now, load in and preprocess the data\n",
     "\n",
-    "df = pd.read_csv(os.path.join(ROOT_DIR, \"\"), index_col='')\n",
+    "train_df = \n",
+    "test_df = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "d3f8430b-4bc5-4643-8684-bed21b17b6fa",
+   "metadata": {
+    "id": "be2ee427-5728-4bfe-95ca-7e977fb891be"
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_12027/2428355683.py:13: FutureWarning: The `inplace` parameter in pandas.Categorical.add_categories is deprecated and will be removed in a future version. Removing unused categories will always return a new Categorical object.\n",
+      "  df[name].cat.add_categories(\"None\", inplace=True)\n",
+      "/tmp/ipykernel_12027/2428355683.py:13: FutureWarning: The `inplace` parameter in pandas.Categorical.add_categories is deprecated and will be removed in a future version. Removing unused categories will always return a new Categorical object.\n",
+      "  df[name].cat.add_categories(\"None\", inplace=True)\n"
+     ]
+    }
+   ],
+   "source": [
     "target_var = \"\"\n",
     "\n",
-    "train, test = load_data(df, cat_features = [], outlier_features=[])"
+    "train, test = preprocess_data(train_df, test_df=test_df, cat_features = [], outlier_features=[])"
    ]
   },
   {
@@ -546,13 +597,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e295babf-8d18-443b-abb7-fea6222be667",
+   "id": "de32c0a7-b583-4555-8629-632c608e2f34",
    "metadata": {
     "id": "e295babf-8d18-443b-abb7-fea6222be667",
     "tags": []
    },
    "source": [
     "# 4. Featurize the Data\n",
+    "\n",
+    "__Note:__ For featurizing data, really be creative. Most especially, use your subject matter expertise or domain knowledge to create features \n",
+    "\n",
     "- Remove uniformative features\n",
     "- Create interactions\n",
     "- Binning\n",
@@ -630,9 +684,9 @@
     "`X['feature'] = np.log1p(X['feature'])`\n",
     "\n",
     "For interations try multiplying or dividing features, especially between levels\n",
-    "of a categorical feature and a continuous feature. Use subject matter expertise here\n",
+    "of a categorical feature and a continuous feature. Use subject matter expertise here. Often, interactions between levels of a categorical variable and values of numerical variable make for good interactions\n",
     "\n",
-    "`df_new['A_B_interation'] = ce.OneHotEncoder().fit_transform(X['A']) * X['B']`"
+    "`X = X.join(ce.OneHotEncoder().fit_transform(df['A']) * df['B'], rsuffix='A_B_interation')`"
    ]
   },
   {
@@ -644,12 +698,7 @@
    },
    "outputs": [],
    "source": [
-    "def mathematical_transforms(df):\n",
-    "    X = pd.DataFrame(index=df.index)\n",
-    "\n",
-    "    return X\n",
-    "\n",
-    "def interactions(df):\n",
+    "def domain_transforms(df):\n",
     "    X = pd.DataFrame(index=df.index)\n",
     "\n",
     "    return X"
@@ -666,8 +715,7 @@
    "source": [
     "X = train.copy()\n",
     "y = X.pop(target_var)\n",
-    "#X = X.join(mathematical_transforms(X))\n",
-    "#X = X.join(interactions(X))\n",
+    "X = X.join(domain_transforms(X))\n",
     "X = ce.OrdinalEncoder().fit_transform(X)\n",
     "\n",
     "score_dataset(X, y)"
@@ -719,6 +767,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3ce915bf-c09a-4b04-ac9e-f369453b7575",
+   "metadata": {},
+   "source": [
+    "Try adjusting what features you cluster together, `cluster_features`, as well as the number of clusters `n_clusters`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1xBut4HcIqCM",
@@ -743,7 +799,7 @@
    "source": [
     "X = train.copy()\n",
     "y = X.pop(target_var)\n",
-    "X = X.join(cluster_distance(X, vape, n_clusters=10))\n",
+    "X = X.join(cluster_distance(X, cluster_features, n_clusters=10))\n",
     "X = ce.OrdinalEncoder().fit_transform(X)\n",
     "\n",
     "score_dataset(X, y)"
@@ -760,7 +816,7 @@
    "source": [
     "X = train.copy()\n",
     "y = X.pop(target_var)\n",
-    "X = X.join(cluster_labels(X, vape, n_clusters=10))\n",
+    "X = X.join(cluster_labels(X, cluster_features, n_clusters=10))\n",
     "X = ce.OrdinalEncoder().fit_transform(X)\n",
     "\n",
     "score_dataset(X, y)"
@@ -822,6 +878,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bc87f7a5-33e6-4ea6-a2e5-1a361f65c8b9",
+   "metadata": {},
+   "source": [
+    "Try out different catgeorical encodings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f87fb0ad-60dc-4d57-a65c-36cf520abb39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = train.copy()\n",
+    "y = X.pop(target_var)\n",
+    "X = ce.m_estimate..MEstimateEncoder(cols=[]).fit_transform(X)\n",
+    "\n",
+    "score_dataset(X, y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "78600898-c660-4b0f-99a9-39b7a773ad5e",
    "metadata": {
     "id": "78600898-c660-4b0f-99a9-39b7a773ad5e"
@@ -839,25 +917,24 @@
    },
    "outputs": [],
    "source": [
-    "def create_features(df, df_test=None):\n",
+    "def create_features(df, test_df=None):\n",
     "    X = df.copy()\n",
     "    \n",
-    "    if df_test is not None:\n",
-    "        X_test = df_test.copy()\n",
+    "    if test_df is not None:\n",
+    "        X_test = test_df.copy()\n",
     "        X = pd.concat([X, X_test])\n",
     "        \n",
     "    # Add in engineered features\n",
-    "    X = X.join(flag_outliers(X))\n",
-    "    X = ce.OrdinalEncoder().fit_transform(X)\n",
+    "    X = X.join(domain_transforms(X))\n",
     "\n",
     "    \n",
     "    # Reform splits\n",
-    "    if df_test is not None:\n",
-    "        X_test = X.loc[df_test.index, :]\n",
-    "        X.drop(df_test.index, inplace=True)\n",
+    "    if test_df is not None:\n",
+    "        X_test = X.loc[test_df.index, :]\n",
+    "        X.drop(test_df.index, inplace=True)\n",
     "    \n",
     "\n",
-    "    if df_test is not None:\n",
+    "    if test_df is not None:\n",
     "        return X, X_test\n",
     "    else:\n",
     "        return X"
@@ -875,9 +952,19 @@
     "X = train.copy()\n",
     "X_test = test.copy()\n",
     "y = X.pop(target_var)\n",
-    "y_test = X_test.pop(target_var)\n",
     "\n",
-    "X, X_test = create_features(train, test)"
+    "# If test set is given without target value\n",
+    "if target_var in X_test.columns:\n",
+    "    y_test = X_test.pop(target_var)\n",
+    "else:\n",
+    "    y_test = None\n",
+    "\n",
+    "X, X_test = create_features(train, test)\n",
+    "\n",
+    "# Do final encoding of categorical features\n",
+    "cat_encoder = ce.OrdinalEncoder()\n",
+    "X = cat_encoder.fit_transform(X, y)\n",
+    "X_test = cat_encoder.transform(X_test)"
    ]
   },
   {
@@ -900,8 +987,10 @@
    },
    "source": [
     "# 6. Hyperparameter Tuning\n",
-    "- Use Optuna to find the beset set of hyperparameters for the final model\n",
-    "- you need to specify the objective (i.e. `'regression'`, `'multiclass'` with '`num_class`', etc.) "
+    "Use Optuna to find the beset set of hyperparameters for the final model\n",
+    "- you need to specify the objective (i.e. `'regression'`, `'multiclass'` with '`num_class`', etc.) \n",
+    "- make sure the `folds` matches the fold evaluation scheme \n",
+    "- you can set `early_stopping_rounds` and `num_boost_round` to custom values"
    ]
   },
   {
@@ -918,11 +1007,11 @@
     "    param = {\n",
     "        \"objective\": \"\",\n",
     "        \"verbosity\": -1,              \n",
-    "        'lambda_l1': trial.suggest_loguniform('lambda_l1', 1e-8, 10.0),\n",
-    "        'lambda_l2': trial.suggest_loguniform('lambda_l2', 1e-8, 10.0),\n",
+    "        'lambda_l1': trial.suggest_float('lambda_l1', 1e-8, 10.0),\n",
+    "        'lambda_l2': trial.suggest_float('lambda_l2', 1e-8, 10.0),\n",
     "        'num_leaves': trial.suggest_int('num_leaves', 2, 512),\n",
-    "        'feature_fraction': trial.suggest_uniform('feature_fraction', 0.1, 1.0),\n",
-    "        'bagging_fraction': trial.suggest_uniform('bagging_fraction', 0.1, 1.0),\n",
+    "        'feature_fraction': trial.suggest_float('feature_fraction', 0.1, 1.0),\n",
+    "        'bagging_fraction': trial.suggest_float('bagging_fraction', 0.1, 1.0),\n",
     "        'bagging_freq': trial.suggest_int('bagging_freq', 0, 15),\n",
     "        'min_child_samples': trial.suggest_int('min_child_samples', 1, 100),\n",
     "    }\n",
@@ -931,9 +1020,8 @@
     "    lgbcv = lgb.cv(param,\n",
     "                   lgb.Dataset(X, label=y),\n",
     "                   folds= KFold(n_splits=5, shuffle=True),\n",
-    "                   verbose_eval=False,                   \n",
-    "                   early_stopping_rounds=10,                   \n",
-    "                   num_boost_round=100\n",
+    "                   callbacks=[lgb.early_stopping(20), lgb.log_evaluation(0)],                 \n",
+    "                   num_boost_round=1500\n",
     "                  )\n",
     "    \n",
     "    cv_score = lgbcv['l2-mean'][-1]\n",
@@ -955,6 +1043,8 @@
    "source": [
     "optuna.logging.set_verbosity(optuna.logging.WARNING) \n",
     "study = optuna.create_study(direction='minimize')\n",
+    "\n",
+    "# timeout is the time in seconds until the program stops the optimization, even if its not done\n",
     "study.optimize(lambda trial: objective(trial, X, y), timeout=300, n_trials=5) "
    ]
   },
@@ -991,7 +1081,7 @@
    },
    "outputs": [],
    "source": [
-    "print(study.best_value**0.5)"
+    "print(study.best_value)"
    ]
   },
   {
@@ -1131,10 +1221,12 @@
    "outputs": [],
    "source": [
     "# Use average for ensembling of the labels\n",
-    "# final_preds = np.mean(preds, axis=0)\n",
+    "# final_test_preds = np.mean(test_preds, axis=0)\n",
     "\n",
     "# Use stacking for the Labels\n",
-    "final_preds = PredStacking(final_estimator=LogisticRegression()).fit_predict(preds)"
+    "ensembler = PredStacking(final_estimator=LinearRegression())\n",
+    "final_train_preds = ensembler.fit_predict(train_preds, y)\n",
+    "final_test_preds = ensembler.predict(test_preds)"
    ]
   },
   {
@@ -1146,23 +1238,13 @@
    },
    "outputs": [],
    "source": [
-    "fig, axs = plt.subplots(1, 2, sharey=True, figsize=(16,8))\n",
-    "sns.distplot(y_test, ax=axs[0])\n",
-    "axs[0].set_title(\"Distribution of Test Target Variable\")\n",
-    "sns.distplot(final_preds , ax=axs[1])\n",
-    "axs[1].set_title(\"Distribution of Predicted Target Variable\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "66c9e33d-1eca-4c9a-b6c0-42a79a5a8ccf",
-   "metadata": {
-    "id": "66c9e33d-1eca-4c9a-b6c0-42a79a5a8ccf"
-   },
-   "outputs": [],
-   "source": [
-    "print(\"Test Accuracy: {}\".format(mean_squared_error(y_test, final_preds, squared=False)))"
+    "fig, axs = plt.subplots(2, 2, sharey=True, figsize=(16,8))\n",
+    "sns.histplot(y, ax=axs[0,0])\n",
+    "axs[0,0].set_title(\"Distribution of Training Target Variable\")\n",
+    "sns.histplot(final_train_preds , ax=axs[0,1])\n",
+    "axs[0,1].set_title(\"Distribution of Predicted Target Variable on Train\")\n",
+    "sns.histplot(final_test_preds , ax=axs[1,1])\n",
+    "axs[1,1].set_title(\"Distribution of Predicted Target Variable on Test\")"
    ]
   },
   {
