--- a/Tabular/Tabular.ipynb
+++ b/Tabular/Tabular.ipynb
@@ -41,14 +41,14 @@
     "from scipy.stats import mode\n",
     "from sklearn.model_selection import cross_validate, KFold, RepeatedKFold, train_test_split\n",
     "from sklearn.preprocessing import FunctionTransformer, StandardScaler, OneHotEncoder, RobustScaler, OrdinalEncoder\n",
-    "from sklearn.metrics import mean_squared_error, mean_absolute_error, balanced_accuracy_score\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error, balanced_accuracy_score, silhouette_score\n",
     "from sklearn.experimental import enable_iterative_imputer\n",
     "from sklearn.impute import IterativeImputer, SimpleImputer, KNNImputer\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.neighbors import NearestNeighbors, LocalOutlierFactor\n",
     "from sklearn.metrics import accuracy_score, mean_squared_error\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer, CountVectorizer\n",
-    "from sklearn.cluster import KMeans, DBSCAN\n",
+    "from sklearn.cluster import KMeans, OPTICS, MiniBatchKMeans\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.feature_selection import mutual_info_regression\n",
     "from sklearn.linear_model import LinearRegression, LogisticRegression\n",
@@ -607,6 +607,16 @@
     "\n",
     "__Note:__ For featurizing data, really be creative. Most especially, use your subject matter expertise or domain knowledge to create features \n",
     "\n",
+    "#### Tips on Creating Features\n",
+    "It's good to keep in mind your model's own strengths and weaknesses when creating features. Here are some guidelines:\n",
+    "\n",
+    "- Linear models learn sums and differences naturally, but can't learn anything more complex.\n",
+    "- Ratios seem to be difficult for most models to learn. Ratio combinations often lead to some easy performance gains.\n",
+    "- Linear models and neural nets generally do better with normalized features. Neural nets especially need features scaled to values not too far from 0. Tree-based models (like random forests and XGBoost) can sometimes benefit from normalization, but usually much less so.\n",
+    "- Tree models can learn to approximate almost any combination of features, but when a combination is especially important they can still benefit from having it explicitly created, especially when data is limited.\n",
+    "- Counts are especially helpful for tree models, since these models don't have a natural way of aggregating information across many features at once.\n",
+    "\n",
+    "Example feature engineering steps:\n",
     "- Remove uniformative features\n",
     "- Create interactions\n",
     "- Binning\n",
@@ -686,7 +696,7 @@
     "For interations try multiplying or dividing features, especially between levels\n",
     "of a categorical feature and a continuous feature. Use subject matter expertise here. Often, interactions between levels of a categorical variable and values of numerical variable make for good interactions\n",
     "\n",
-    "`X = X.join(ce.OneHotEncoder().fit_transform(df['A']) * df['B'], rsuffix='A_B_interation')`"
+    "`X = X.join(ce.OneHotEncoder().fit_transform(df['A']).multiply(df['B'], axis='index'), rsuffix='A_B_interation')`"
    ]
   },
   {
@@ -745,10 +755,11 @@
     "    X_scaled = X.loc[:, features]\n",
     "    X_scaled = ce.OneHotEncoder().fit_transform(X_scaled)\n",
     "    X_scaled = (X_scaled - X_scaled.mean(axis=0)) / (X_scaled.std(axis=0)+0.000001)\n",
-    "    kmeans = KMeans(n_clusters=n_clusters, n_init=50)\n",
+    "    kmeans = MiniBatchKMeans(n_clusters=n_clusters, batch_size=4096, n_init='auto')\n",
     "    X_new = pd.DataFrame(index=X.index)\n",
     "    X_new[\"Cluster\"] = kmeans.fit_predict(X_scaled)\n",
     "    X_new[\"Cluster\"] = X_new[\"Cluster\"].astype(\"category\")\n",
+    "    print(\"Silhouette Score: {}\".format(silhouette_score(X_scaled, X_new[\"Cluster\"])))\n",
     "    return X_new[\"Cluster\"]\n",
     "\n",
     "\n",
@@ -757,8 +768,9 @@
     "    X_scaled = X.loc[:, features]\n",
     "    X_scaled = ce.OneHotEncoder().fit_transform(X_scaled)\n",
     "    X_scaled = (X_scaled - X_scaled.mean(axis=0)) / (X_scaled.std(axis=0)+0.000001)\n",
-    "    kmeans = KMeans(n_clusters=n_clusters, n_init=50)\n",
+    "    kmeans = MiniBatchKMeans(n_clusters=n_clusters, batch_size=4096, n_init='auto')\n",
     "    X_cd = kmeans.fit_transform(X_scaled)\n",
+    "    print(\"Silhouette Score: {}\".format(silhouette_score(X_scaled, kmeans.predict(X_scaled))))\n",
     "    # Label features and join to dataset\n",
     "    X_cd = pd.DataFrame(\n",
     "        X_cd, columns=[f\"Centroid_{i}\" for i in range(X_cd.shape[1])], index=X.index\n",
@@ -785,7 +797,9 @@
    "source": [
     "cluster_features = [\n",
     "    \n",
-    "]"
+    "]\n",
+    "\n",
+    "n_clusters = 10"
    ]
   },
   {
@@ -799,7 +813,7 @@
    "source": [
     "X = train.copy()\n",
     "y = X.pop(target_var)\n",
-    "X = X.join(cluster_distance(X, cluster_features, n_clusters=10))\n",
+    "X = X.join(cluster_distance(X, cluster_features, n_clusters=n_clusters))\n",
     "X = ce.OrdinalEncoder().fit_transform(X)\n",
     "\n",
     "score_dataset(X, y)"
@@ -816,7 +830,7 @@
    "source": [
     "X = train.copy()\n",
     "y = X.pop(target_var)\n",
-    "X = X.join(cluster_labels(X, cluster_features, n_clusters=10))\n",
+    "X = X.join(cluster_labels(X, cluster_features, n_clusters=n_clusters))\n",
     "X = ce.OrdinalEncoder().fit_transform(X)\n",
     "\n",
     "score_dataset(X, y)"
@@ -917,11 +931,16 @@
    },
    "outputs": [],
    "source": [
-    "def create_features(df, test_df=None):\n",
+    "def create_features(df, target_var, test_df=None):\n",
     "    X = df.copy()\n",
+    "    y = X.pop(target_var)\n",
     "    \n",
     "    if test_df is not None:\n",
     "        X_test = test_df.copy()\n",
+    "        if target_var in X_test.columns:\n",
+    "            y_test = X_test.pop(target_var)\n",
+    "        else:\n",
+    "            y_test = None\n",
     "        X = pd.concat([X, X_test])\n",
     "        \n",
     "    # Add in engineered features\n",
@@ -932,12 +951,20 @@
     "    if test_df is not None:\n",
     "        X_test = X.loc[test_df.index, :]\n",
     "        X.drop(test_df.index, inplace=True)\n",
+    "        \n",
+    "    # Do final encoding of categorical features on Train\n",
+    "    cat_encoder_1 = ce.m_estimate.MEstimateEncoder(cols=[])\n",
+    "    cat_encoder_2 = ce.OrdinalEncoder()\n",
+    "    X = cat_encoder_1.fit_transform(X, y)\n",
+    "    X = cat_encoder_2.fit_transform(X)\n",
     "    \n",
-    "\n",
     "    if test_df is not None:\n",
-    "        return X, X_test\n",
+    "        # Do final encoding of categorical features on Test\n",
+    "        X_test = cat_encoder_1.transform(X_test)\n",
+    "        X_test = cat_encoder_2.transform(X_test)\n",
+    "        return X, y, X_test, y_test\n",
     "    else:\n",
-    "        return X"
+    "        return X, y"
    ]
   },
   {
@@ -949,22 +976,7 @@
    },
    "outputs": [],
    "source": [
-    "X = train.copy()\n",
-    "X_test = test.copy()\n",
-    "y = X.pop(target_var)\n",
-    "\n",
-    "# If test set is given without target value\n",
-    "if target_var in X_test.columns:\n",
-    "    y_test = X_test.pop(target_var)\n",
-    "else:\n",
-    "    y_test = None\n",
-    "\n",
-    "X, X_test = create_features(train, test)\n",
-    "\n",
-    "# Do final encoding of categorical features\n",
-    "cat_encoder = ce.OrdinalEncoder()\n",
-    "X = cat_encoder.fit_transform(X, y)\n",
-    "X_test = cat_encoder.transform(X_test)"
+    "X, y, X_test, y_test = create_features(train, target_var, test)"
    ]
   },
   {
@@ -1238,7 +1250,7 @@
    },
    "outputs": [],
    "source": [
-    "fig, axs = plt.subplots(2, 2, sharey=True, figsize=(16,8))\n",
+    "fig, axs = plt.subplots(2, 2, sharey=True, sharex=True, figsize=(16,8))\n",
     "sns.histplot(y, ax=axs[0,0])\n",
     "axs[0,0].set_title(\"Distribution of Training Target Variable\")\n",
     "sns.histplot(final_train_preds , ax=axs[0,1])\n",
@@ -1277,7 +1289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
