--- a/Tabular/Tabular.ipynb
+++ b/Tabular/Tabular.ipynb
@@ -754,12 +754,13 @@
     "    X = df.copy()\n",
     "    X_scaled = X.loc[:, features]\n",
     "    X_scaled = ce.OneHotEncoder().fit_transform(X_scaled)\n",
-    "    X_scaled = (X_scaled - X_scaled.mean(axis=0)) / (X_scaled.std(axis=0)+0.000001)\n",
+    "    scaler = RobustScaler()\n",
+    "    X_scaled = scaler.fit_transform(X_scaled.to_numpy())\n",
     "    kmeans = MiniBatchKMeans(n_clusters=n_clusters, batch_size=4096, n_init='auto')\n",
     "    X_new = pd.DataFrame(index=X.index)\n",
     "    X_new[\"Cluster\"] = kmeans.fit_predict(X_scaled)\n",
     "    X_new[\"Cluster\"] = X_new[\"Cluster\"].astype(\"category\")\n",
-    "    print(\"Silhouette Score: {}\".format(silhouette_score(X_scaled, X_new[\"Cluster\"])))\n",
+    "    #print(\"Silhouette Score: {}\".format(silhouette_score(X_scaled, X_new[\"Cluster\"])))\n",
     "    return X_new[\"Cluster\"]\n",
     "\n",
     "\n",
@@ -767,10 +768,11 @@
     "    X = df.copy()\n",
     "    X_scaled = X.loc[:, features]\n",
     "    X_scaled = ce.OneHotEncoder().fit_transform(X_scaled)\n",
-    "    X_scaled = (X_scaled - X_scaled.mean(axis=0)) / (X_scaled.std(axis=0)+0.000001)\n",
+    "    scaler = RobustScaler()\n",
+    "    X_scaled = scaler.fit_transform(X_scaled.to_numpy())\n",
     "    kmeans = MiniBatchKMeans(n_clusters=n_clusters, batch_size=4096, n_init='auto')\n",
     "    X_cd = kmeans.fit_transform(X_scaled)\n",
-    "    print(\"Silhouette Score: {}\".format(silhouette_score(X_scaled, kmeans.predict(X_scaled))))\n",
+    "    #print(\"Silhouette Score: {}\".format(silhouette_score(X_scaled, kmeans.predict(X_scaled))))\n",
     "    # Label features and join to dataset\n",
     "    X_cd = pd.DataFrame(\n",
     "        X_cd, columns=[f\"Centroid_{i}\" for i in range(X_cd.shape[1])], index=X.index\n",
@@ -1289,7 +1291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
