Starting ZSL text block

--- a/Images/Zero-shot Image Classification.ipynb
+++ b/Images/Zero-shot Image Classification.ipynb
@@ -5,9 +5,9 @@
    "id": "4862ffd7-a79c-4a58-8b6b-b4059470ce51",
    "metadata": {},
    "source": [
-    "# Import neccesary packages and Define Helper Packages\n",
+    "# Import neccessary packages and Define Helper Packages\n",
     "- For this demonstration, we need to install [albumentations](https://albumentations.ai/) for image augmentation\n",
-    "- import necceaary packages, most especially HuggingFace, some image handling packages, and Pytorch"
+    "- import neccessary packages, most especially HuggingFace, some image handling packages, and Pytorch"
    ]
   },
   {
